fix footer buttons alignment

--- a/assets/scss/request.scss
+++ b/assets/scss/request.scss
@@ -214,6 +214,9 @@
 .request__footer__buttons {
   max-width: 560px;
   margin: 0 auto;
+  button {
+    margin: 0 10px;
+  }
 }
 
 .request__footer {
